# Buping_Job_Seeker_Assistant

./: .gitignore  README.md  README_EN.md  TODO.md  app_ui.py  config.py  main.py  pyproject.toml  requirements.txt  start-dev.bat  start-dev.sh
.github/workflows/: ai-engine-evaluation.yml  ci.yml
backend/: app.py  dev_launcher.py
backend/api/: router.py
backend/api/endpoints/: ai_metrics.py  ai_skills.py  history.py  interview.py  job_tracker.py  memory.py  resume.py  settings.py
backend/services/: ai_metrics_service.py  ai_skill_service.py  config_service.py  interview_service.py  resume_service.py  resume_validation.py
data_folder/: plain_text_resume_zh.yaml  secrets.yaml  work_preferences_zh.yaml
data_folder_example/: plain_text_resume_zh.yaml  secrets.yaml
doc/: README.md  architecture.md  changelog.md  features.md  notion_mcp_setup.md  performance.md  roadmap.md  troubleshooting.md  tts_minimax.md
docs/: PHASE_2_AI_ENGINEERING_PLAN.md
docs/ai_engine/: ADR-001-AI-RUNTIME.md  EVALUATION.md  IMPLEMENTATION_STATUS.md  M0_BASELINE.md
docs/review/: 2026-06-04_mock_interview_module.md
frontend/: .env.cloud  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/.openai/: hosting.json
frontend/drizzle/: 0000_multi_user.sql
frontend/scripts/: prepare-sites.mjs
frontend/server/: index.js
frontend/src/: App.tsx  CloudApp.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AIRewriteDialog.tsx  AuthGate.tsx  ErrorBoundary.tsx  LoadingSpinner.tsx  Sidebar.tsx
frontend/src/components/editor/: EditableResumePreview.tsx  EditorToolbar.tsx  ResumeEditor.tsx  extractStyle.ts  index.ts
frontend/src/hooks/: useAvailableModels.ts  useSessionState.ts
frontend/src/i18n/: index.ts
frontend/src/pages/: AIMonitoring.tsx  History.tsx  InterviewPrep.tsx  JobTracker.tsx  MockInterview.tsx  ResumeGenerate.tsx  Settings.tsx
scripts/: benchmark_ai_engine.py
src/: logging.py
src/libs/ai_engine/: __init__.py  exceptions.py  models.py  runtime.py
src/libs/ai_engine/context/: __init__.py  budget.py  compressors.py  manager.py  tokenizer.py
src/libs/ai_engine/memory/: __init__.py  manager.py  models.py  repository.py
src/libs/ai_engine/observability/: __init__.py  langchain_tracing.py  tracing.py
src/libs/ai_engine/optimization/: __init__.py  cache.py  fingerprints.py
src/libs/ai_engine/providers/: __init__.py  base.py  gateway.py
src/libs/ai_engine/skills/: __init__.py  base.py  factory.py  registry.py  runner.py
src/libs/interview_prep/: __init__.py  interview_generator.py  mock_interview.py
src/libs/resume_and_cover_builder/: config.py  document_parser.py  module_loader.py  resume_facade.py  resume_generator.py  template_base_zh.py  utils.py
src/libs/resume_and_cover_builder/cover_letter_prompt/: strings_zh-cn.py
src/libs/resume_and_cover_builder/llm/: llm_generate_cover_letter_from_job.py  llm_generate_resume.py  llm_generate_resume_from_job.py  (+1 more)
src/resume_schemas/: resume.py
src/utils/: chrome_utils.py
tests/: test_imports.py  test_interview_ai_metrics.py  test_interview_prep_report.py  test_interview_tts.py  test_llm_config.py  test_resume_validation.py  test_smoke.py
tests/ai_engine/: test_ai_metrics_service.py  test_benchmark_gate.py  test_budget_allocator.py  test_context_manager.py  test_gateway.py  test_incremental_context.py  test_interview_coach_skill.py  test_jd_archive.py  test_memory_repository.py  test_mock_interview_context.py  test_prompt_cache.py  test_resume_versions.py  test_skill_registry.py  test_skill_runner.py
tests/ai_engine/integration/: test_user_workflows.py
tests/fixtures/ai_engine/: performance_budgets.json
(+13 files in other folders)
