[project]
name = "buping-job-seeker-assistant"
version = "0.2.0"
description = "AI-powered career assistant for resume generation, interview prep and mock interviews"
requires-python = ">=3.10,<3.13"
dependencies = [
    # Backend API
    "fastapi[standard]>=0.115.0",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.9",
    # LLM
    "langchain==0.2.11",
    "langchain-anthropic",
    "langchain-huggingface",
    "langchain-community==0.2.10",
    "langchain-core==0.2.36",
    "langchain-google-genai==1.0.10",
    "langchain-ollama==0.1.3",
    "langchain-openai==0.1.17",
    "langchain-text-splitters==0.2.2",
    "langsmith==0.1.93",
    "openai==1.37.1",
    # Resume / PDF
    "reportlab==4.2.2",
    "selenium==4.9.1",
    "webdriver-manager==4.0.2",
    "undetected-chromedriver==3.5.5",
    "pdfminer.six==20221105",
    # Document parsing
    "python-docx>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    # Note: PyMuPDF (fitz) is used for PDF extraction (already installed)
    # Utilities
    "click",
    "httpx~=0.27.2",
    "inputimeout==1.0.4",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2023.12.1",
    "Levenshtein==0.25.1",
    "loguru==0.7.2",
    "python-dotenv~=1.0.1",
    "PyYAML~=6.0.2",
    "regex==2024.7.24",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-mock",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "src"]
